HelloWord/force-app/main/default/objects/A__c/fields/FrmA__c.field-meta.xml
<CustomField>
    <fullName>FrmA__c</fullName>
    <formula>StdFIELD__c *5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FrmA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>