HelloWord/force-app/main/default/objects/A__c/fields/FtmB__c.field-meta.xml
<CustomField>
    <fullName>FtmB__c</fullName>
    <label>FtmB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>