HelloWord/force-app/main/default/objects/A__c/fields/ISChecked__c.field-meta.xml
<CustomField>
    <fullName>ISChecked__c</fullName>
    <formula>IF( FrmA__c =    FtmB__c /2   , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ISChecked</label>
    <type>Checkbox</type>
</CustomField>