HelloWord/force-app/main/default/objects/A__c/fields/StdFIELD__c.field-meta.xml
<CustomField>
    <fullName>StdFIELD__c</fullName>
    <label>StdFIELD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>