HelloWord/force-app/main/default/objects/A__c/fields/sum__c.field-meta.xml
<CustomField>
    <fullName>sum__c</fullName>
    <label>sum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>